--- a/Pokedex_Matheus.xcodeproj/xcshareddata/xcschemes/Pokedex_Matheus.xcscheme
+++ b/Pokedex_Matheus.xcodeproj/xcshareddata/xcschemes/Pokedex_Matheus.xcscheme
@@ -27,7 +27,24 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2C9881B9245F2BAD005CEF9D"
+            BuildableName = "Pokedex_MatheusTests.xctest"
+            BlueprintName = "Pokedex_MatheusTests"
+            ReferencedContainer = "container:Pokedex_Matheus.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2C9881C4245F2BAD005CEF9D"
+            BuildableName = "Pokedex_MatheusUITests.xctest"
+            BlueprintName = "Pokedex_MatheusUITests"
+            ReferencedContainer = "container:Pokedex_Matheus.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
